# cloud_music

./: .gitignore  README.md  REMIND.md  analysis_options.yaml  build.yaml  pubspec.yaml
android/: build.gradle
android/app/: build.gradle  proguard-shield.txt
assets/cookie/: netease-cloud-music-api-mu-opal.vercel.app  neteasecloudmusicapi.yueqiqi.top.app  unlogin.app
assets/i18n/: cn.json  en.json
breakpad/: README.md  pubspec.yaml
breakpad/android/: build.gradle  settings.gradle
breakpad/ios/: breakpad.podspec
breakpad/lib/: breakpad.dart
doc/: todo.md
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/bloc/: bloc.dart
lib/common/: bloc_wrapper.dart  common.dart  constants.dart  player_state_wrap.dart  translations.g.dart
lib/i18n/: strings.i18n.json  strings_cn.i18n.json
lib/model/: model.dart
lib/network/: http_logger.dart  http_url.dart  network.dart  network_config.dart  rest_client.dart  rest_client.g.dart
lib/page/: _old_home_page.dart  home_page.dart  login_page.dart  page.dart
lib/pages/: page.dart  pages.dart
lib/route/: back_dispatcher.dart  page_router.dart  pages.dart  route_parser.dart  routes.dart
media/: README.md  pubspec.yaml
media/android/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  Callback.cpp  Callback.h  Player.cpp  Player.h  VideoChannel.cpp  VideoChannel.h  media-lib-jni.cpp  media-lib.cpp  media.cpp
media/android/src/main/cpp/include/libavutil/: ffversion.h
media/android/src/main/cpp/utils/: JavaCallback.h  SafeQueue.h  logger.h
test/: widget_test.dart
(+203 files in other folders)
